# STCF

./: .gitignore  README.md
1-RICH/0-Decode/: Makefile  README  RICH  RICH.cpp
1-RICH/0-Decode/inc/: LinkDef.h  MyDataDecoder.h  MyDatabaseClass.h
1-RICH/0-Decode/src/: MyDataDecoder.cpp  MyDatabaseClass.cpp  MyGuiMainAction.cpp  MyGuiMainFrame.cpp
1-RICH/1-NumEval/: Makefile  RICH  RICH.cpp  RICHDict_rdict.pcm  RICH使用手册.pages  ReadPIDRoot.C  log
1-RICH/1-NumEval/Misc/: RICHFit.C  test.C
1-RICH/1-NumEval/README/: README.md
1-RICH/1-NumEval/Submit/: Readme  run.sh  template.cmd  template.sh
1-RICH/1-NumEval/database/: APD_qe.txt  Aerogel1022_ref.txt  Aerogel1024_abs.txt  Aerogel1024_ref.txt  Aerogel1027_ref.txt  Aerogel1028_ref.txt  Aerogel1030_ref.txt  Aerogel105_ref.txt  Aerogel106_ref.txt  Aerogel107_ref.txt  Aerogel108_ref.txt  Aerogel109_abs.txt  Aerogel109_ref.txt  Aerogel110_ref.txt  Ar_ref.txt  C4F10_abs.txt  C4F10_ref.txt  C6F14_ref.txt  CH4_ref.txt  CaF2_ref.txt  CsI_qe.txt  H2O_ref.txt  MgF2_ref.txt  N2_ref.txt  O2_ref.txt  PURE_abs.txt  PURE_qe.txt  PURE_ref.txt  Quartz3301_ref.txt
1-RICH/1-NumEval/inc/: LinkDef.h  MyCommonRICH.h  MyDatabaseClass.h  MyGuiActionClass.h  MyMainFrameGui.h  MyNumEvalClass.h  MyRICHDetector.h  MyReadData.h  MyStyle.h
1-RICH/1-NumEval/lib/: RICHDict.cpp
1-RICH/1-NumEval/sim/: MyStyle.cpp  MyStyle.h  ReadPIDRoot.C  draw.c  stcf-5mm-batch.txt
1-RICH/1-NumEval/src/: MyCommonRICH.cpp  MyDatabaseClass.cpp  MyGuiActionClass.cpp  MyMainFrameGui.cpp  MyNumEvalClass.cpp
1-RICH/2-BeamTest/: RICH  RICH.cpp
1-RICH/2-BeamTest/README/: Tracker_VMM_Map_20190925.txt  VMM数据格式说明Ver1.1.docx
1-RICH/2-BeamTest/data/: MyBeamTestGeometry.h  MyDetGeoManager.h  MyDetGeoMisc.h  MyDetGeoUtility.h  ReadCombineRoot.C  checkCMBRoot.C  checkCMBRoot.h  checkDSTRoot.C  checkRawRoot.C  read.C  test.C
1-RICH/2-BeamTest/database/: Aerogel105_abs.txt  Aerogel105_ref.txt  Aerogel106_abs.txt  Aerogel107_ref.txt  Aerogel108_ref.txt  Aerogel110_abs.txt  CaF2_ref.txt  MPPC1025_qe.txt  MPPC1050_qe.txt  MPPC2050_qe.txt  N2_ref.txt  O2_ref.txt  Quartz3301_abs.txt  Quartz_abs.txt  Water_ref.txt
1-RICH/2-BeamTest/inc/: CombineData.h  MyBeamTestDetector.h  (+7 more)
1-RICH/3-DESYBeam/: Makefile  RICH  RICH.cpp
1-RICH/4-Simulation/RICHSim/: CMakeLists.txt  gdmlDet.cc  gmath.hh  run.C  run.mac  vis.mac
1-RICH/4-Simulation/RICHSim/analysis/: kstest.f
1-RICH/4-Simulation/RICHSim/source/AnalysisManager/include/: MyAnalysisManager.hh  MyAnalysisMessenger.hh  MyG4BasedAnalysis.hh  SimEvent.hh
1-RICH/4-Simulation/RICHSim/source/AnalysisManager/src/: MyAnalysisManager.cc  MyAnalysisMessenger.cc  MyG4BasedAnalysis.cc
1-RICH/4-Simulation/RICHSim/source/DetectorConstruction/gdml/: main.gdml
1-RICH/4-Simulation/RICHSim/source/DetectorConstruction/gdml/Material/: C6F14.xml  LiF.xml  Quartz.xml
1-RICH/4-Simulation/RICHSim/source/DetectorConstruction/gdml/Material/code/: ArGasMix.xml  GenMix.C
1-RICH/4-Simulation/RICHSim/source/DetectorConstruction/gdml/Material/database/: Aerogel108_abs.txt  C6F14_abs.txt  C6F14_ref.txt  CH4_abs.txt  CH4_ref.txt  H2O_abs.txt  LiF_abs.txt  LiF_ref.txt  MgF2_abs.txt  N2_abs.txt  O2_abs.txt  Quartz3001_abs.txt  Quartz311_abs.txt  Quartz311_ref.txt  Water_abs.txt  acalData.C
1-RICH/4-Simulation/RICHSim/source/DetectorConstruction/gdml/Structure/: RICH.gdml
1-RICH/4-Simulation/RICHSim/source/DetectorConstruction/gdml/Structure/Arrange/: Single.gdml  aCopy.gdml
1-RICH/4-Simulation/RICHSim/source/DetectorConstruction/gdml/Structure/Widget/: Cell.gdml  RICH1.gdml  RICH3-C6F14-bend.gdml  RICH4-C6F14-flat.gdml  RICH5-LiF-bend.gdml  aCopy.gdml
1-RICH/4-Simulation/RICHSim/source/DetectorConstruction/include/: MyDetectorConstruction.hh
1-RICH/4-Simulation/RICHSim/source/DetectorConstruction/src/: MyDetectorConstruction.cc
1-RICH/4-Simulation/RICHSim/source/G4Actions/include/: MyActionInitialization.hh  Verbose.hh
1-RICH/4-Simulation/RICHSim/source/G4Actions/src/: G04SensitiveDetector.cc  MyActionInitialization.cc  MyStackAction.cc  MyStepAction.cc
1-RICH/4-Simulation/RICHSim/source/ParticleSource/: pdg.txt
1-RICH/4-Simulation/RICHSim/source/ParticleSource/include/: MyParticleGun.hh  MyParticleGunMessenger.hh
1-RICH/4-Simulation/RICHSim/source/ParticleSource/src/: MyParticleGun.cc  MyParticleGunMessenger.cc
1-RICH/4-Simulation/RICHSim/source/PhysicsList/include/: MyPhysicsList.hh
1-RICH/4-Simulation/RICHSim/source/PhysicsList/src/: MyPhysicsList.cc
1-RICH/5-IHEPTOF/: OscData.h  OscIOFuncs.h  ReadOsc.C
1-RICH/6-BeamTest/: Makefile  RICH
1-RICH/6-BeamTest-IHEP/: README  RICH  RICH.cpp
1-RICH/GUI/: Makefile  RICH
4-BeamTube/source/: CMakeLists.txt  main.cc  run.mac  vis.mac
COMMON/: MyMiscellaneous.h  MyStyle.cpp  MyStyle.h  datafile.txt
(+151 files in other folders)
